--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="text">
             <h3 class="content-name"><ruby><rb>増田洸太</rb><rt>masuda kota</rt> </ruby></h3>
             <p>埼玉県出身　B型　おとめ座<br>趣味：野球観戦　|　ゲーム</p>
-            <p>中学は野球部、高校は陸上部でした。<br>身体を動かすのが好きで今でも大学生や社会人の方たちと草野球をしています。<br>
+            <p>中学は野球部でした。<br>身体を動かすのが好きで今でも大学生や社会人の方たちと草野球をしています。<br>
               池袋のお勧めの場所は、<a href="https://grandscape-ikebukuro.jp/">グランドスケープ池袋</a>の屋上にあるバッティングセンター。<br>
               課題に行き詰まった時などは学校帰りに学校を上から見下ろし？フルスイングを！<br>
               ストレス発散に是非！夜は夜景も奇麗ですよ。<br>
